[package]
edition = "2024"
name = "textrender"
version = "0.3.0"

[dependencies]
crossbeam-queue = "0.3.12"
hudhook = "0.8.1"
pelite = "0.10.0"

tracing-appender = "0.2.3"
tracing-panic = "0.1.2"

[dependencies.tracing]
version = "0.1.41"
features = ["release_max_level_info"]

[dependencies.retour]
features = ["static-detour"]
version = "0.3.1"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3.19"

[dependencies.nalgebra]
version = "0.33"

[dependencies.eldenring]
git = "https://github.com/vswarte/fromsoftware-rs"
branch = "main"
version = "0.11.0"

[dependencies.fromsoftware-shared]
git = "https://github.com/vswarte/fromsoftware-rs"
branch = "main"
version = "0.11.0"


[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
panic = "abort"
strip = true
